# ds-projects

./: .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
data-manipulation-and-arima-modeling-with-pyramid/: 1_data_manipulation.ipynb  2_time_series_components.ipynb  3_forecasting_with_arima.ipynb
prophet-model-incorporated-with-bayesian-analysis/: 0_test_pystan.ipynb  1_forecasting_air_passenger_numbers.ipynb
