[project]
name = "ds-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pmdarima>=2.0.4",
    "prophet>=1.1.6",
    "pydlm>=0.1.1.13",
    "pymc3>=3.11.4",
    "ruff>=0.9.5",
    "tensorflow-probability>=0.25.0",
]
